# navavej-poc

./: .gitignore  README.md  app_poc.py  main.py  pyproject.toml  requirements.txt  strict_evaluation.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: content_matching_artifacts.pkl  cosine_recommendation_config.json  gemini_realtime_progress.json  navavej_packages.csv  navavej_packages_scraped.csv  training_table_gemini_labels.csv
models/: model_artifacts.pkl
scripts/: debug_recommendation_scores.py
src/: __init__.py  api.py  config.py  dataset_snapshot.py  inference_engine.py  mlflow_utils.py  simulation_rules.py  train_job.py
tests/: test_clinical_rules.py  test_engine.py  test_normalization.py  test_simulation_rules.py  test_vitals_fallback.py
ui/: app.py
